2005-03-31 J.R. Heisey <jrheisey@sourceforge.com>
	* src/processor.cpp: Changed call ProgramCounter->get_PC() to
	ProgramCounter->get_value() to fix a problem where the initial
	position of the PC in the source was not getting set properly.
	Return value is used for indexing into source code line.
	Mostly used by the UI so should not affect behavior.

2005-03-30 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/cmd_dump.cc: Changed ram dump command to handle ram sizes
	greater than one byte.
	* cli/cmd_x.cc: Removed call to dump.dump(DUMP_SFRS) since previous
	call to dump.dump(DUMP_RAM) already dump thes sfrs too.ram halt.
	* Cleaned up a couple of GUI error messages. (invalid window handle,
	invalid value strings)

2005-03-24 J.R. Heisey <jrheisey@sourceforge.com>
	* src/breakpoints.cc, src/processor.cc, h, cli/cmd_clear.cc:
	Fixed crash in Breakpoints::clear() that I reintroduced in my last checkin.
	Also Fixed the original memory leak by properly removing chained 
	Breakpoint_Instruction objects from the instruction chain when clearing a
	break object. When the chain is properly maintained the object may be
	deleted. Perhaps this should be a temporary fix until a base class
	for Breakpoint_Instruction all have a replaced member.

2005-03-23 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc: changed the comment text color to 'dim gray'
	
2005-03-23 Scott Dattalo <scott@dattalo.com>
	* src/value.cc: Fixed write to a null pointer in String::get(char
	*buf, int len).
	* src/symbol.cc: Fixed infinite loop in 
	char *register_symbol::name (char *buf, int len).
	* regression/ccp/ccp.asm: added more features to the ccp
	regression test.
	
2005-03-22 J.R. Heisey <jrheisey@sourceforge.com>
	* gui/gui_watch.cc: Fixed problem with register values > 127 causing pango runtime warnings

2005-03-21 J.R. Heisey <jrheisey@sourceforge.com>
	* src/breakpoints.cc, src/processor.h: created a notification
	to Processor when breakpoints are set or cleared. Cleaned up